Fix building on GNU/kFreeBSD https://bugs.webkit.org/show_bug.cgi?id=71005

Patch by Gustavo Noronha Silva <gns@gnome.org> on 2011-10-27
Reviewed by Darin Adler.

* config.h:
* wtf/Platform.h:

Canonical link: https://commits.webkit.org/87259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98629 268f45cc-cd09-0410-ab3c-d52691b4dbfc